grammar.js
        source_file: $ => seq(optional($._gap), $._hoonTall, repeat(seq($._gap, $._hoonTall)), optional($._gap)),

        _hoonTall: $ => choice($._runeTall, $._hoonWide),
        _hoonWide: $ => choice(
            $._runeWide,
            $._value,
            $._irregularForms
        ),

        _specTall: $ => choice($._bucTall, $._specWide, $.cenhepTall, $.cenlusTall, seq("$;", $._gap, $._specTall),
        ),//TODO: add all cen runes
        _specWide: $ => choice(
            $.term,
            $.aura,
            $.typeUnion,
            prec.left(0, seq(choice($.parent, $.name), repeat(
                seq(":", choice($.parent, $.name, $.number, $.cell, $.stripFace))
            ))),// $.composeExpressions,
            alias(prec.left(0, seq(optional($._specWide), "=", $._specWide)), $.wrapFace),// $.wrapFace,
            $.mold,
            seq("[", $._specWide, repeat(seq($._space, $._specWide)), "]"), //$.cell
            $.normalize,
            $._bucWide,
            seq("$;", "(", $._specWide, ")"),
            $.gateCall, $.cenhepWide, $.cenlusWide,
            // $.wrapFace2,
            $.factoryGate,
        ),
        _wingTall: $ => choice($._wingWide, $.tisgalTall, $.tisgarTall),
        _wingWide: $ => choice(
            $.name,
            $.parent,
            $.gateCall,
            $.lark,
            $.wingPath,
            $.fullContext,
            $.specialIndex,
            $.wrapFace,
            $.tisgalWide,
            $.tisgarWide,
            $.cell,
        ),
        // _skinTall: $ => choice($._skinWide),
        // _skinWide: $ => choice(
        //     $.name,
        //     $.mold,
        //     $.cell,
        //     $.gateCall,
        //     $.term,
        //     $.parent,
        //     $.normalize,
        //     $.aura,
        //     prec.left(0, seq($._skinWide, "=", choice($._skinWide, seq($.name, ":", $.name)))),
        //     seq("=", choice($._skinWide, seq($.name, ":", $.name))),
        // ),
        _skinWide: $ => choice($._specWide, $.addCell),
        _termTall: $ => choice($._termWide),
        _termWide: $ => choice(
            $.name, $.term
        ),
        _chumTall: $ => choice($._chumWide),
        _labelTall: $ => choice($._labelWide),
        _lusTall: $ => choice(
            $.luslusTall,
            $.lusbucTall,
            $.lusbarTall,
        ),

        rune: $ => "感#)@!(",
        lusbarTall: $ => seq(alias("+|", $.rune), $._gap, $._labelTall),
        lusbucTall: $ => seq(alias("+$", $.rune), $._gap, $.name, $._gap, $._specTall),
        luslusTall: $ => seq(alias("++", $.rune), $._gap, $.name, $._gap, $._hoonTall),
        lustarTall: $ => seq(alias("+*", $.rune), repeat1(seq($._gap, $.name, $._gap, $._hoonTall))),
        barcabTall: $ => seq(alias("|_", $.rune), $._gap, $._specTall, $._gap, choice($._lusTall, $.lustarTall), repeat(seq($._gap, $._lusTall)), $._gap, $.coreTerminator),
        cencabTall: $ => seq(alias("%_", $.rune), $._gap, $._wingTall, $._gap, repeat1(seq($._wingTall, $._gap, $._hoonTall, $._gap)), $.seriesTerminator),
        cencolTall: $ => seq(alias("%:", $.rune), $._gap, $._hoonTall, $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        cendotTall: $ => seq(alias(seq("%", "."), $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        cenhepTall: $ => seq(alias("%-", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        cenketTall: $ => seq(alias("%^", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        cenlusTall: $ => seq(alias("%+", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        censigTall: $ => seq(alias(seq("%", "~"), $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        centarTall: $ => seq(alias("%*", $.rune), $._gap, $._wingTall, $._gap, $._hoonTall, $._gap, repeat1(seq($._wingTall, $._gap, $._hoonTall, $._gap)), $.seriesTerminator),
        centisTall: $ => seq(alias("%=", $.rune), $._gap, $._wingTall, $._gap, repeat1(seq($._wingTall, $._gap, $._hoonTall, $._gap)), $.seriesTerminator),
        faslusTall: $ => seq(alias("/+", $.rune), $._gap, optional("*"), $.name, optional(seq("=", $.name)), repeat(seq(",", choice($._gap, $._space), optional("*"), $.name, optional(seq("=", $.name))))),
        fashepTall: $ => seq(alias("/-", $.rune), $._gap, optional("*"), $.name, optional(seq("=", $.name)), repeat(seq(",", choice($._gap, $._space), optional("*"), $.name, optional(seq("=", $.name))))),
        fastisTall: $ => seq(alias("/=", $.rune), $._gap, $.name, $._gap, $.path),
        fastarTall: $ => seq(alias("/*", $.rune), $._gap, $.name, $._gap, $.term, $._gap, $.path),
        fasbucTall: $ => seq(alias("/$", $.rune), $._gap, $.name, $._gap, $.term, $._gap, $.term),
        fassigTall: $ => seq(alias("/~", $.rune), $._gap, $.name, $._gap, $._specWide, $._gap, $.path),
        fascenTall: $ => seq(alias("/%", $.rune), $._gap, $.name, $._gap, $.term),
        miccolTall: $ => seq(alias(";:", $.rune), $._gap, $._hoonTall, $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        micgalTall: $ => seq(alias(";<", $.rune), $._gap, $._specTall, $._gap, $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        miclusTall: $ => seq(alias(";+", $.rune), $._gap, $._hoonTall),
        micmicTall: $ => seq(alias(";;", $.rune), $._gap, $._specTall, $._gap, $._hoonTall),
        micfasTall: $ => seq(alias(";/", $.rune), $._gap, $._hoonTall),
        micsigTall: $ => seq(alias(";~", $.rune), $._gap, $._hoonTall, $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        mictarTall: $ => seq(alias(";*", $.rune), $._gap, $._hoonTall),
        mictisTall: $ => seq(alias(";=", $.rune), $._gap, repeat1(seq($._hoonTall, $._gap)), $.seriesTerminator),
        siggarTall: $ => seq(alias("~>", $.rune), $._gap, $._termWide, optional(seq(".", optional($._gap), $._hoonTall)), $._gap, $._hoonTall),
        sigbarTall: $ => seq(alias("~|", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        sigbucTall: $ => seq(alias("~$", $.rune), $._gap, $._termTall, $._gap, $._hoonTall),
        sigcabTall: $ => seq(alias("~_", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        sigcenTall: $ => seq(alias("~%", $.rune), $._gap, $._chumTall, $._gap, $._hoonTall, $._gap, choice("~", seq($.seriesTerminator, $._gap, repeat1(seq($._hoonWide, $._gap, $._hoonTall, $._gap)), $.seriesTerminator)), $._gap, $._hoonTall),
        siggalTall: $ => seq(alias("~<", $.rune), $._gap, $._termWide, optional(seq(".", optional($._gap), $._hoonTall)), $._gap, $._hoonTall),
        siglusTall: $ => seq(alias("~+", $.rune), $._gap, $._hoonTall),
        sigfasTall: $ => seq(alias("~/", $.rune), $._gap, $._chumTall, $._gap, $._hoonTall),
        sigpamTall: $ => seq(alias("~&", $.rune), $._gap, optional(seq(choice(">", ">>", ">>>"), $._gap)), $._hoonTall, $._gap, $._hoonTall),
        sigtisTall: $ => seq(alias("~=", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        sigwutTall: $ => seq(alias("~?", $.rune), $._gap, optional(seq(choice(">", ">>", ">>>"), $._gap)), $._hoonTall, $._gap, $._hoonTall, $._gap, $._hoonTall),
        sigzapTall: $ => seq(alias("~!", $.rune), $._gap, $._hoonTall, $._gap, $._hoonTall),
        cencabWide: $ => seq(alias("%_", $.rune), "(", $._wingWide, $._space, $._wingWide, $._space, $._hoonWide, repeat(seq(",", $._space, $._wingWide, $._space, $._hoonWide)), ")"),
        cencolWide: $ => seq(alias("%:", $.rune), "(", $._hoonWide, repeat1(seq($._space, $._hoonWide)), ")"),
        cendotWide: $ => seq(alias(seq("%", "."), $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        cenhepWide: $ => seq(alias("%-", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        cenketWide: $ => seq(alias("%^", $.rune), "(", $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        cenlusWide: $ => seq(alias("%+", $.rune), "(", $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        censigWide: $ => seq(alias(seq("%", "~"), $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        centarWide: $ => seq(alias("%*", $.rune), "(", $._wingWide, $._space, $._hoonWide, $._space, $._wingWide, $._space, $._hoonWide, repeat(seq(",", $._space, $._wingWide, $._space, $._hoonWide)), ")"),
        centisWide: $ => seq(alias("%=", $.rune), "(", $._wingWide, $._space, $._wingWide, $._space, $._hoonWide, repeat(seq(",", $._space, $._wingWide, $._space, $._hoonWide)), ")"),
        miccolWide: $ => seq(alias(";:", $.rune), "(", $._hoonWide, $._space, $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        micgalWide: $ => seq(alias(";<", $.rune), "(", $._specWide, $._space, $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        miclusWide: $ => seq(alias(";+", $.rune), "(", $._hoonWide, ")"),
        micmicWide: $ => seq(alias(";;", $.rune), "(", $._specWide, $._space, $._hoonWide, ")"),
        micfasWide: $ => seq(alias(";/", $.rune), "(", $._hoonWide, ")"),
        micsigWide: $ => seq(alias(";~", $.rune), "(", $._hoonWide, $._space, $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        mictarWide: $ => seq(alias(";*", $.rune), "(", $._hoonWide, ")"),
        mictisWide: $ => seq(alias(";=", $.rune), "(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        siggarWide: $ => seq(alias("~>", $.rune), "(", $._termWide, optional(seq(".", optional($._gap), $._hoonWide)), $._space, $._hoonWide, ")"),
        sigbarWide: $ => seq(alias("~|", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        sigbucWide: $ => seq(alias("~$", $.rune), "(", $._termWide, $._space, $._hoonWide, ")"),
        sigcabWide: $ => seq(alias("~_", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        siggalWide: $ => seq(alias("~<", $.rune), "(", $._termWide, optional(seq(".", optional($._gap), $._hoonWide)), $._space, $._hoonWide, ")"),
        siglusWide: $ => seq(alias("~+", $.rune), "(", $._hoonWide, ")"),
        sigfasWide: $ => seq(alias("~/", $.rune), "(", $._chumTall, $._space, $._hoonWide, ")"),
        sigpamWide: $ => seq(alias("~&", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        sigtisWide: $ => seq(alias("~=", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        sigwutWide: $ => seq(alias("~?", $.rune), "(", $._hoonWide, $._space, $._hoonWide, $._space, $._hoonWide, ")"),
        sigzapWide: $ => seq(alias("~!", $.rune), "(", $._hoonWide, $._space, $._hoonWide, ")"),
        normalize: $ => prec.left(2, seq("_", $._hoonWide)),
        wrapFace: $ => seq($._skinWide, "=", $._hoonWide),
        wrapFace2: $ => seq("=", $._specWide),
        typeUnion: $ => seq("?", "(", $._specWide, repeat(seq($._space, $._specWide)), ")"),
        gateCall: $ => seq("(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        pullArmInDoor: $ => seq("~(", $._wingWide, $._space, $._hoonWide, repeat1(seq($._space, $._hoonWide)), ")"),
        resolveWingWithChanges: $ => seq($._wingWide, "(", $._wingWide, $._space, $._hoonWide, repeat(seq(",", $._space, $._wingWide, $._space, $._hoonWide)), ")"),
        cell: $ => seq(optional("~"), "[", $._hoonWide, repeat(seq($._space, $._hoonWide)), "]", optional("~")),
        increment: $ => seq("+", "(", $._hoonWide, ")"),
        equality: $ => prec(1, seq("=", "(", $._hoonWide, $._space, $._hoonWide, ")")),
        typeCast: $ => seq("`", $._specWide, "`", $._hoonWide), //`specWide`hoonWide
        nullList: $ => prec(1, seq("`", $._hoonWide)),
        bunt: $ => prec(1, seq("*", $._specWide)),
        factoryGate: $ => prec(1, seq(",", $._specWide)),
        twoArgstoN: $ => seq(":(", $._hoonWide, repeat1(seq($._space, $._hoonWide)), ")"),
        composeExpressions: $ => prec(3, seq($._hoonWide, repeat1(seq(":", $._hoonWide)))),
        logicalOr: $ => seq("|(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        logicalAnd: $ => seq("&(", $._hoonWide, repeat(seq($._space, $._hoonWide)), ")"),
        logicalNot: $ => prec.left(2, seq("!", $._hoonWide)),
        addCell: $ => seq(choice($.name, $.boolean, $.number), choice("+", "/"), $._hoonWide),
        appendCell: $ => prec(3, seq($._hoonWide, repeat1(seq("^", $._hoonWide)))),
        tank: $ => seq(">", $._hoonWide, repeat(seq($._space, $._hoonWide)), "<"),
        tankTape: $ => seq("<", $._hoonWide, repeat(seq($._space, $._hoonWide)), ">"),
        name: $ => choice("$", /[a-zA-Z][a-zA-Z0-9-]*/),
        number: $ => prec.right(0, choice(
            seq(optional(choice("--", "-")), choice(
                seq(/[0-9]{1,3}/, repeat(seq(".", optional($._gap), /[0-9]{3}/))), //@ud
                seq(/0x[0-9a-fA-F]{1,4}/, repeat(seq(".", optional($._gap), /[0-9a-fA-F]{4}/))), //@ux
                seq(/0b[01]{1,4}/, repeat(seq(".", optional($._gap), /[01]{4}/))), //@ub
                /0i[0-9]+/, //@ui
                seq(/0v[0-9a-v]{1,5}/, repeat(seq(".", optional($._gap), /[0-9a-v]{5}/))), //@uv
                seq(/0w[0-9a-zA-Z-~]{1,5}/, repeat(seq(".", optional($._gap), /[0-9a-zA-Z-~]{5}/))) //@uw
            )
            ), seq(".", optional(choice("~", "~~", "~~~")), /[0-9]+(.[0-9]+)?/) //@rh,@rs,@rd,@rq
        )),
        term: $ => choice(seq("%", choice($.name, $.number, $.date, seq("'", /[^\n']*/, "'"), $.knot, "~", $.ipAddress, $.bitcoinAddress, $.boolean, $.unicode, $.phonemic))),
        aura: $ => /@[a-zA-Z]*/,
        _space: $ => " ",
        _gap: $ => alias(repeat1(/ +|\n/), $.Gap),
        fullContext: $ => ".",
        lark: $ => choice("+", "-", /(([-+][<>])+)|([-+]([<>][-+])+)/),
        //strings
        path: $ => seq(optional("%"), choice("/", repeat1(seq(repeat1("/"), choice($.name, $.cell, $.gateCall, $.number, $.cord, $.knot, $.date))))),
